<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playing_now"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.arthurgrangeiro.justmusic.PlayingNow">

    <ImageView
        android:id="@+id/now_playing_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/centuries" />

    <LinearLayout
        android:id="@+id/now_playing_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/now_playing_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/centuries"
            android:textColor="@color/dark_gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/now_playing_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fall_out_boys"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/now_playing_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/now_playing_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/now_playing_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/now_playing_play"
            android:text="@string/before" />

        <Button
            android:id="@+id/now_playing_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/play" />

        <Button
            android:id="@+id/now_playing_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/now_playing_play"
            android:text="@string/next" />
    </RelativeLayout>

    <TextView
        android:id="@+id/now_playing_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:text="@string/details"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />
</LinearLayout>
