<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_song_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="br.com.arthurgrangeiro.justmusic.SongDetails">

    <TextView
        android:id="@+id/details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/item_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/centuries"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/dark_gray"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/details_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/item_vertical_margin"
        android:text="@string/fall_out_boys"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/details_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:background="@color/white"
        android:padding="@dimen/text_padding"
        android:text="@string/details_description"
        android:textColor="@color/dark_gray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/details_back_button"
        style="@style/my_button"
        android:text="@string/back" />
</LinearLayout>
